mer rydding av gammel moro